# leomower

./: CMakeLists.txt  LICENSE  README.md  package.xml
WebPage/: index.css  index.html  index.js
doc/: data_collection.md  drive.md  infer.md  train.md
launch/: leomower.launch  talker.launch
leo_mower_gazebo/: CMakeLists.txt  package.xml
leo_mower_gazebo/launch/: golf_course.launch  leo_gazebo.launch  spawn_controllers.launch  spawn_model.launch  spawn_robot.launch
leo_mower_gazebo/models/: shape.dae
leo_mower_gazebo/models/golf_course/: model.config  model.sdf
leo_mower_gazebo/models/golf_course/dem/: heightmap.tif  nice_border_500px.tif  test_heightmap.tif
leo_mower_gazebo/urdf/: leo_erc.urdf.xacro  leo_erc_macros.xacro  leo_erc_sim.urdf.xacro  leo_macros.xacro  probe.urdf.xacro  zed2.xacro
leo_mower_gazebo/worlds/: golf_course.world
leomower/: CMakeLists.txt  package.xml
leomower/doc/: data_collection.md  infer.md
leomower/launch/: leomower.launch  talker.launch
leomower/scripts/: data_collection.py  infer.py  train_model_resnet18.py
leomower/scripts/tests/: test_infer.py
scripts/: data_collection.py  drive.py  infer.py  listener.py  listener_image.py  talker.py  teleop_key.py  test_infer.py
