<?xml version="1.0"?>
<package format="3">
  <name>leo_mower_gazebo</name>
  <version>0.0.0</version>
  <description>
    Launch files and other resources for simulating Leo Rover (ERC edition) in Gazebo.
  </description>

  <maintainer email="eric.piraux@o2do.be">Eric Piraux</maintainer>
  <author email="benjamin.patte@o2do.be">Benjamin Patte</author>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python_orocos_kdl</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-pykdl</exec_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <exec_depend>leo_gazebo</exec_depend>
  <exec_depend>leo_erc_description</exec_depend>
 
</package>
